--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.js",
-    "dev": "nodemon src/server.js"
+    "start": "SET NODE_ENV=development&& nodemon src/server.js",
+    "start:prod": "SET NODE_ENV=production&& nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
