--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.0",
+    "nodemailer": "^7.0.11",
+    "pug": "^3.0.3",
     "validator": "^13.15.23"
   },
   "devDependencies": {
